fix table column alignment when only 1 data column and a checkbox (#3438)

--- a/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
@@ -165,6 +165,7 @@
           .rsa-form-checkbox-label {
             &::before {
               color: text-color(secondary);
+              position: static;
             }
           }
         }
@@ -174,12 +175,6 @@
         .rsa-data-table-body-cell[data-field="checkbox"] {
           &:hover {
             cursor: pointer;
-
-            .rsa-form-checkbox-label {
-              &::before {
-                color: text-color(neutral, base);
-              }
-            }
           }
         }
       }
@@ -187,6 +182,14 @@
 
     &-body-cell {
       border-top: 1px solid border-color(primary, dark);
+
+      .rsa-form-checkbox-label {
+        &::before {
+          position: static;
+          color: text-color(neutral, base);
+        }
+      }
+
       .meta-key-and-value {
         .key {
           color: text-color(neutral, base, translucent);
